--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
     compile 'com.doomonafireball.betterpickers:library:1.6.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
