--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name=".activities.MainScreenActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/MyNoActionBarShadowTheme">
         </activity>
         <!--Include the AdActivity configChanges and theme. -->
         <activity android:name="com.google.android.gms.ads.AdActivity"
