--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.squareup.dagger:dagger:1.2.2'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -42,4 +42,8 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.beardedhen:androidbootstrap:+'
+    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.afollestad:material-dialogs:0.7.4.2'
+    compile 'com.daimajia.swipelayout:library:1.1.8@aar'
 }
